Adding Turbo and displaying the category items in the category

--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -10,3 +10,5 @@
 <%= link_to 'Back', categories_path %>
 
 <hr>
+
+<%= turbo_frame_tag 'category-items-list', src: category_category_items_path(@category) %>
